Changed from using position fixed to overflow hidden

--- a/styles/stylesheet.scss
+++ b/styles/stylesheet.scss
@@ -519,7 +519,7 @@ h1
 }
 @media all and (min-width: $change-width){
 	body{
-			position: static !important;
+			overflow: initial !important;
 		}
 	}
 		
